src/ltl.leg.c
/* A recursive-descent parser generated by peg 0.1.15 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 22

#include "pickaxe.h"
#include "ltl.h"
extern LTLExpr *parsed;

static FILE *fp_queries;
void init_yy()
{
	fp_queries = fopen("queries", "r");
	if (fp_queries == NULL) 
	{
		printf("File not found: queries");
		exit(1);
	}
}

#define YY_INPUT(buf, result, max_size)		\
  {												\
    int yyc= fgetc(fp_queries); \
    result= (-1 == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));				\
  }
#define YYSTYPE LTLExpr*

#ifndef YY_MALLOC
#define YY_MALLOC(C, N)		malloc(N)
#endif
#ifndef YY_REALLOC
#define YY_REALLOC(C, P, N)	realloc(P, N)
#endif
#ifndef YY_FREE
#define YY_FREE(C, P)		free(P)
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YYRELEASE
#define YYRELEASE	yyrelease
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yy->__begin= yy->__pos, 1)
#endif
#ifndef YY_END
#define YY_END		( yy->__end= yy->__pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif
#ifndef YY_STACK_SIZE
#define YY_STACK_SIZE 128
#endif

#ifndef YY_BUFFER_SIZE
#define YY_BUFFER_SIZE 1024
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *yy, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *__buf;
  int       __buflen;
  int       __pos;
  int       __limit;
  char     *__text;
  int       __textlen;
  int       __begin;
  int       __end;
  int       __textmax;
  yythunk  *__thunks;
  int       __thunkslen;
  int       __thunkpos;
  YYSTYPE   __;
  YYSTYPE  *__val;
  YYSTYPE  *__vals;
  int       __valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#ifndef YY_INPUT
#define YY_INPUT(yy, buf, result, max_size)		\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext _yyctx= { 0, 0 };
yycontext *yyctx= &_yyctx;
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#endif

YY_LOCAL(int) yyrefill(yycontext *yy)
{
  int yyn;
  while (yy->__buflen - yy->__pos < 512)
    {
      yy->__buflen *= 2;
      yy->__buf= (char *)YY_REALLOC(yy, yy->__buf, yy->__buflen);
    }
#ifdef YY_CTX_LOCAL
  YY_INPUT(yy, (yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#else
  YY_INPUT((yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#endif
  if (!yyn) return 0;
  yy->__limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *yy)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  ++yy->__pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *yy, int c)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  if ((unsigned char)yy->__buf[yy->__pos] == c)
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *yy, const char *s)
{
  int yysav= yy->__pos;
  while (*s)
    {
      if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
      if (yy->__buf[yy->__pos] != *s)
        {
          yy->__pos= yysav;
          return 0;
        }
      ++s;
      ++yy->__pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *yy, unsigned char *bits)
{
  int c;
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  c= (unsigned char)yy->__buf[yy->__pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *yy, yyaction action, int begin, int end)
{
  while (yy->__thunkpos >= yy->__thunkslen)
    {
      yy->__thunkslen *= 2;
      yy->__thunks= (yythunk *)YY_REALLOC(yy, yy->__thunks, sizeof(yythunk) * yy->__thunkslen);
    }
  yy->__thunks[yy->__thunkpos].begin=  begin;
  yy->__thunks[yy->__thunkpos].end=    end;
  yy->__thunks[yy->__thunkpos].action= action;
  ++yy->__thunkpos;
}

YY_LOCAL(int) yyText(yycontext *yy, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yy->__textlen < (yyleng + 1))
	{
	  yy->__textlen *= 2;
	  yy->__text= (char *)YY_REALLOC(yy, yy->__text, yy->__textlen);
	}
      memcpy(yy->__text, yy->__buf + begin, yyleng);
    }
  yy->__text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *yy)
{
  int pos;
  for (pos= 0;  pos < yy->__thunkpos;  ++pos)
    {
      yythunk *thunk= &yy->__thunks[pos];
      int yyleng= thunk->end ? yyText(yy, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yy->__text));
      thunk->action(yy, yy->__text, yyleng);
    }
  yy->__thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *yy)
{
  if ((yy->__limit -= yy->__pos))
    {
      memmove(yy->__buf, yy->__buf + yy->__pos, yy->__limit);
    }
  yy->__begin -= yy->__pos;
  yy->__end -= yy->__pos;
  yy->__pos= yy->__thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *yy, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(yy);
      yyCommit(yy);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *yy, char *text, int count)
{
  yy->__val += count;
  while (yy->__valslen <= yy->__val - yy->__vals)
    {
      long offset= yy->__val - yy->__vals;
      yy->__valslen *= 2;
      yy->__vals= (YYSTYPE *)YY_REALLOC(yy, yy->__vals, sizeof(YYSTYPE) * yy->__valslen);
      yy->__val= yy->__vals + offset;
    }
}
YY_LOCAL(void) yyPop(yycontext *yy, char *text, int count)   { yy->__val -= count; }
YY_LOCAL(void) yySet(yycontext *yy, char *text, int count)   { yy->__val[count]= yy->__; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yy, yythunkpos0)

YY_RULE(int) yy_CONST(yycontext *yy); /* 22 */
YY_RULE(int) yy_PLACEHOLDER(yycontext *yy); /* 21 */
YY_RULE(int) yy_ATOMIC(yycontext *yy); /* 20 */
YY_RULE(int) yy_CLOSE(yycontext *yy); /* 19 */
YY_RULE(int) yy_OPEN(yycontext *yy); /* 18 */
YY_RULE(int) yy_Term(yycontext *yy); /* 17 */
YY_RULE(int) yy_EXCL(yycontext *yy); /* 16 */
YY_RULE(int) yy_Prop(yycontext *yy); /* 15 */
YY_RULE(int) yy_Not(yycontext *yy); /* 14 */
YY_RULE(int) yy_BIARROW(yycontext *yy); /* 13 */
YY_RULE(int) yy_Temp(yycontext *yy); /* 12 */
YY_RULE(int) yy_ARROW(yycontext *yy); /* 11 */
YY_RULE(int) yy_Iff(yycontext *yy); /* 10 */
YY_RULE(int) yy_AMP(yycontext *yy); /* 9 */
YY_RULE(int) yy_Impl(yycontext *yy); /* 8 */
YY_RULE(int) yy_PIPE(yycontext *yy); /* 7 */
YY_RULE(int) yy_And(yycontext *yy); /* 6 */
YY_RULE(int) yy_Or(yycontext *yy); /* 5 */
YY_RULE(int) yy_EOL(yycontext *yy); /* 4 */
YY_RULE(int) yy_Expr(yycontext *yy); /* 3 */
YY_RULE(int) yy__(yycontext *yy); /* 2 */
YY_RULE(int) yy_Stmt(yycontext *yy); /* 1 */

YY_ACTION(void) yy_1_CONST(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_CONST\n"));
  {
   __ = create_const(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_ATOMIC(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_ATOMIC\n"));
  {
   __ = create_atomic(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_PLACEHOLDER(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_PLACEHOLDER\n"));
  {
   __ = create_placeholder(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_3_Term(yycontext *yy, char *yytext, int yyleng)
{
#define i yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_3_Term\n"));
  {
   __= i; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef i
}
YY_ACTION(void) yy_2_Term(yycontext *yy, char *yytext, int yyleng)
{
#define i yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_Term\n"));
  {
   __= i; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef i
}
YY_ACTION(void) yy_1_Term(yycontext *yy, char *yytext, int yyleng)
{
#define i yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Term\n"));
  {
   __= i; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef i
}
YY_ACTION(void) yy_1_Prop(yycontext *yy, char *yytext, int yyleng)
{
#define i yy->__val[-1]
#define l yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Prop\n"));
  {
   __= i; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef i
#undef l
}
YY_ACTION(void) yy_1_Not(yycontext *yy, char *yytext, int yyleng)
{
#define l yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Not\n"));
  {
   __ = create_ltl(l, NULL, ltl_not);;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef l
}
YY_ACTION(void) yy_4_Temp(yycontext *yy, char *yytext, int yyleng)
{
#define r yy->__val[-1]
#define l yy->__val[-2]
#define n yy->__val[-3]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_4_Temp\n"));
  {
   __ = create_ltl(l, r, ltl_u); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef r
#undef l
#undef n
}
YY_ACTION(void) yy_3_Temp(yycontext *yy, char *yytext, int yyleng)
{
#define r yy->__val[-1]
#define l yy->__val[-2]
#define n yy->__val[-3]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_3_Temp\n"));
  {
   __ = create_ltl(l, NULL, ltl_g); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef r
#undef l
#undef n
}
YY_ACTION(void) yy_2_Temp(yycontext *yy, char *yytext, int yyleng)
{
#define r yy->__val[-1]
#define l yy->__val[-2]
#define n yy->__val[-3]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_Temp\n"));
  {
   __ = create_ltl(l, NULL, ltl_f); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef r
#undef l
#undef n
}
YY_ACTION(void) yy_1_Temp(yycontext *yy, char *yytext, int yyleng)
{
#define r yy->__val[-1]
#define l yy->__val[-2]
#define n yy->__val[-3]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Temp\n"));
  {
   __ = create_ltl(l, NULL, ltl_x);;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef r
#undef l
#undef n
}
YY_ACTION(void) yy_2_Iff(yycontext *yy, char *yytext, int yyleng)
{
#define r yy->__val[-1]
#define l yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_Iff\n"));
  {
   __= l; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef r
#undef l
}
YY_ACTION(void) yy_1_Iff(yycontext *yy, char *yytext, int yyleng)
{
#define r yy->__val[-1]
#define l yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Iff\n"));
  {
   l = create_ltl(l, r, ltl_iff);;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef r
#undef l
}
YY_ACTION(void) yy_2_Impl(yycontext *yy, char *yytext, int yyleng)
{
#define r yy->__val[-1]
#define l yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_Impl\n"));
  {
   __= l; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef r
#undef l
}
YY_ACTION(void) yy_1_Impl(yycontext *yy, char *yytext, int yyleng)
{
#define r yy->__val[-1]
#define l yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Impl\n"));
  {
   l = create_ltl(l, r, ltl_imp);;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef r
#undef l
}
YY_ACTION(void) yy_2_And(yycontext *yy, char *yytext, int yyleng)
{
#define r yy->__val[-1]
#define l yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_And\n"));
  {
   __= l; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef r
#undef l
}
YY_ACTION(void) yy_1_And(yycontext *yy, char *yytext, int yyleng)
{
#define r yy->__val[-1]
#define l yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_And\n"));
  {
   l = create_ltl(l, r, ltl_and);;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef r
#undef l
}
YY_ACTION(void) yy_2_Or(yycontext *yy, char *yytext, int yyleng)
{
#define r yy->__val[-1]
#define l yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_Or\n"));
  {
   __= l; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef r
#undef l
}
YY_ACTION(void) yy_1_Or(yycontext *yy, char *yytext, int yyleng)
{
#define r yy->__val[-1]
#define l yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Or\n"));
  {
   l = create_ltl(l, r, ltl_or); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef r
#undef l
}
YY_ACTION(void) yy_1_Expr(yycontext *yy, char *yytext, int yyleng)
{
#define s yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Expr\n"));
  {
   __= s; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef s
}
YY_ACTION(void) yy_2_Stmt(yycontext *yy, char *yytext, int yyleng)
{
#define e yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_Stmt\n"));
  {
   printf("LTL parse error\n"); parsed = NULL; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef e
}
YY_ACTION(void) yy_1_Stmt(yycontext *yy, char *yytext, int yyleng)
{
#define e yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Stmt\n"));
  {
   parsed = e; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef e
}

YY_RULE(int) yy_CONST(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "CONST"));
  {  int yypos2= yy->__pos, yythunkpos2= yy->__thunkpos;  yyText(yy, yy->__begin, yy->__end);  {
#define yytext yy->__text
#define yyleng yy->__textlen
if (!(YY_BEGIN)) goto l3;
#undef yytext
#undef yyleng
  }  if (!yymatchString(yy, "true")) goto l3;  yyText(yy, yy->__begin, yy->__end);  {
#define yytext yy->__text
#define yyleng yy->__textlen
if (!(YY_END)) goto l3;
#undef yytext
#undef yyleng
  }  if (!yy__(yy)) goto l3;  goto l2;
  l3:;	  yy->__pos= yypos2; yy->__thunkpos= yythunkpos2;  yyText(yy, yy->__begin, yy->__end);  {
#define yytext yy->__text
#define yyleng yy->__textlen
if (!(YY_BEGIN)) goto l1;
#undef yytext
#undef yyleng
  }  if (!yymatchString(yy, "false")) goto l1;  yyText(yy, yy->__begin, yy->__end);  {
#define yytext yy->__text
#define yyleng yy->__textlen
if (!(YY_END)) goto l1;
#undef yytext
#undef yyleng
  }  if (!yy__(yy)) goto l1;  yyDo(yy, yy_1_CONST, yy->__begin, yy->__end);
  }
  l2:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "CONST", yy->__buf+yy->__pos));
  return 1;
  l1:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "CONST", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_PLACEHOLDER(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "PLACEHOLDER"));  yyText(yy, yy->__begin, yy->__end);  {
#define yytext yy->__text
#define yyleng yy->__textlen
if (!(YY_BEGIN)) goto l4;
#undef yytext
#undef yyleng
  }  if (!yymatchChar(yy, '?')) goto l4;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\377\003\376\377\377\207\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l4;
  l5:;	
  {  int yypos6= yy->__pos, yythunkpos6= yy->__thunkpos;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\377\003\376\377\377\207\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l6;  goto l5;
  l6:;	  yy->__pos= yypos6; yy->__thunkpos= yythunkpos6;
  }  yyText(yy, yy->__begin, yy->__end);  {
#define yytext yy->__text
#define yyleng yy->__textlen
if (!(YY_END)) goto l4;
#undef yytext
#undef yyleng
  }  if (!yy__(yy)) goto l4;  yyDo(yy, yy_1_PLACEHOLDER, yy->__begin, yy->__end);
  yyprintf((stderr, "  ok   %s @ %s\n", "PLACEHOLDER", yy->__buf+yy->__pos));
  return 1;
  l4:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "PLACEHOLDER", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_ATOMIC(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "ATOMIC"));  yyText(yy, yy->__begin, yy->__end);  {
#define yytext yy->__text
#define yyleng yy->__textlen
if (!(YY_BEGIN)) goto l7;
#undef yytext
#undef yyleng
  }  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\200\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l7;
  l8:;	
  {  int yypos9= yy->__pos, yythunkpos9= yy->__thunkpos;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\200\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l9;  goto l8;
  l9:;	  yy->__pos= yypos9; yy->__thunkpos= yythunkpos9;
  }  yyText(yy, yy->__begin, yy->__end);  {
#define yytext yy->__text
#define yyleng yy->__textlen
if (!(YY_END)) goto l7;
#undef yytext
#undef yyleng
  }  if (!yy__(yy)) goto l7;  yyDo(yy, yy_1_ATOMIC, yy->__begin, yy->__end);
  yyprintf((stderr, "  ok   %s @ %s\n", "ATOMIC", yy->__buf+yy->__pos));
  return 1;
  l7:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "ATOMIC", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_CLOSE(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "CLOSE"));  if (!yymatchChar(yy, ')')) goto l10;  if (!yy__(yy)) goto l10;
  yyprintf((stderr, "  ok   %s @ %s\n", "CLOSE", yy->__buf+yy->__pos));
  return 1;
  l10:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "CLOSE", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_OPEN(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "OPEN"));  if (!yymatchChar(yy, '(')) goto l11;  if (!yy__(yy)) goto l11;
  yyprintf((stderr, "  ok   %s @ %s\n", "OPEN", yy->__buf+yy->__pos));
  return 1;
  l11:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "OPEN", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_Term(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;  yyDo(yy, yyPush, 1, 0);
  yyprintf((stderr, "%s\n", "Term"));
  {  int yypos13= yy->__pos, yythunkpos13= yy->__thunkpos;  if (!yy_ATOMIC(yy)) goto l14;  yyDo(yy, yySet, -1, 0);  yyDo(yy, yy_1_Term, yy->__begin, yy->__end);  goto l13;
  l14:;	  yy->__pos= yypos13; yy->__thunkpos= yythunkpos13;  if (!yy_PLACEHOLDER(yy)) goto l15;  yyDo(yy, yySet, -1, 0);  yyDo(yy, yy_2_Term, yy->__begin, yy->__end);  goto l13;
  l15:;	  yy->__pos= yypos13; yy->__thunkpos= yythunkpos13;  if (!yy_CONST(yy)) goto l12;  yyDo(yy, yySet, -1, 0);  yyDo(yy, yy_3_Term, yy->__begin, yy->__end);
  }
  l13:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "Term", yy->__buf+yy->__pos));  yyDo(yy, yyPop, 1, 0);
  return 1;
  l12:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Term", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_EXCL(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "EXCL"));  if (!yymatchChar(yy, '!')) goto l16;  if (!yy__(yy)) goto l16;
  yyprintf((stderr, "  ok   %s @ %s\n", "EXCL", yy->__buf+yy->__pos));
  return 1;
  l16:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "EXCL", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_Prop(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;  yyDo(yy, yyPush, 2, 0);
  yyprintf((stderr, "%s\n", "Prop"));
  {  int yypos18= yy->__pos, yythunkpos18= yy->__thunkpos;  if (!yy_Term(yy)) goto l19;  yyDo(yy, yySet, -2, 0);  goto l18;
  l19:;	  yy->__pos= yypos18; yy->__thunkpos= yythunkpos18;  if (!yy_OPEN(yy)) goto l17;  if (!yy_Expr(yy)) goto l17;  yyDo(yy, yySet, -1, 0);  if (!yy_CLOSE(yy)) goto l17;  yyDo(yy, yy_1_Prop, yy->__begin, yy->__end);
  }
  l18:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "Prop", yy->__buf+yy->__pos));  yyDo(yy, yyPop, 2, 0);
  return 1;
  l17:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Prop", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_Not(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;  yyDo(yy, yyPush, 1, 0);
  yyprintf((stderr, "%s\n", "Not"));
